# SHEALTH_05

./: .cursorrules  CMakeLists.txt  README.md  TDD 기반 암호 검사기 또는 BMI 프로젝트용 프롬프트.txt
.github/workflows/: ci.yml
Prompt/: 01.cursorrules_report.prompt.md  02.requirements_analysis_report.prompt.md  03.code_quality_report.prompt.md  04.modern_cpp_refactoring_report.prompt.md  05.cursorrules_weight_imputation_rule_report.prompt.md  06.test_plan_report.prompt.md  07.bmi_test_implementation_report.prompt.md  08.bmi_defect_analysis_report.prompt.md  09.approval_golden_master_report.prompt.md  10.defect_management_report.prompt.md  11.qa_final_report.prompt.md  12.feature_requirements_analysis_report.prompt.md  13.feature_code_quality_report.prompt.md  14.feature_test_plan_report.prompt.md  15.feature_test_implementation_report.prompt.md  16.feature_defect_summary_report.prompt.md  17.feature_golden_master_implementation_report.prompt.md  18.feature_refactoring_plan_report.prompt.md  19.feature_defect_report_report.prompt.md  20.feature_qa_final_report_report.prompt.md
Report/: 01.cursorrules_report.md  02.requirements_analysis_report.md  03.code_quality_report.md  04.modern_cpp_refactoring_report.md  05.cursorrules_weight_imputation_rule_report.md  06.test_plan_report.md  07.bmi_test_implementation_report.md  08.bmi_defect_analysis_report.md  09.approval_golden_master_report.md  10.defect_management_report.md  11.qa_final_report.md  12.feature_requirements_analysis_report.md  13.feature_code_quality_report.md  14.feature_test_plan_report.md  15.feature_test_implementation_report.md  16.feature_defect_summary_report.md  17.feature_golden_master_implementation_report.md  18.feature_refactoring_plan_report.md  19.feature_defect_report_report.md  20.feature_qa_final_report_report.md
docs/: defect_list.md  defect_report.md  feature_code_quality_report.md  feature_defect_list.md  feature_defect_report.md  feature_qa_final_report.md  feature_requirements_analysis.md  feature_test_plan.md  qa_final_report.md  requirements_analysis.md  test_plan.md
src/main/cpp/: BmiCategory.h  BmiClassifier.h  SHealth.cpp  SHealth.h  SHealthBMI.cpp  StandardBmiClassifier.cpp  StandardBmiClassifier.h
src/test/cpp/: ApprovalTestsMain.cpp  SHealthBMITest.cpp  TexttestFixture.cpp
src/test/cpp/approval_tests/: TexttestFixture.SHealthBmiOutputMatchesGoldenMaster.approved.txt
src/test/cpp/golden_master/: SHealthFeatureSnapshot.expected.txt
